fix tesseract styles so they overlap parent container

--- a/src/styles/VisualizationTesseract.css
+++ b/src/styles/VisualizationTesseract.css
@@ -4,23 +4,27 @@
   flex-direction: column;
   display: flex;
   min-height: 350px;
+  position: relative;
 }
 
 /* Keep padding for the text content above visualizer */
 .visualizer-card-content {
   padding: 2rem 2rem 0 2rem;
+  position: absolute;
 }
 
 .tesseract-visualizer-container {
+  width: 100%;
+  height: 100%;
   flex: 1;
-  position: relative;
+  position: absolute;
 }
 
 .tesseract-canvas {
   width: 120%;
-  height: 150%;
+  height: 120%;
   position: absolute;
-  top: -40%;
+  top: -10%;
   left: -10%;
   z-index: 1;
   display: block;
